# openai-test

./: .gitignore  README.md  pyproject.toml
src/openai_test/: __init__.py  cli.py  client.py  probes.py  retry.py
tests/: test_client.py
